# tin

./: CMakeLists.txt  clientMain.cpp  clientMain2.cpp  fileOwners.txt  filesOwners.txt  main.cpp  users.txt
authorization/: authorization.cpp  authorization.h
client/: Client.cpp  Client.h  NFSClient.cpp  NFSClient.h  client.cpp  client.h  functions.cpp  functions.h  host.h  main.cpp  response.cpp  response.h
disk/: 2.txt
disk/second/: 3.txt
diskCopy/first/: 4.txt  5.txt
diskCopy/first/internal/: 6.txt  7.txt
server/: ConnectionHandler.cpp  ConnectionHandler.h  ConnectionThread.cpp  ConnectionThread.h  DirectoriesExceptions.h  DirectoriesMonitor.h  Directory.cpp  Directory.h  File.cpp  File.h  FileManager.cpp  FileManager.h  FilesMonitor.h  Server.cpp  Server.h  ServerExceptions.h
server/authorization/: Authorization.cpp  Authorization.h  authorization.cpp  authorization.h
server/fs/: DirectoriesExceptions.h  DirectoriesMonitor.h  Directory.cpp  Directory.h  File.cpp  File.h  FileManager.cpp  FileManager.h  FilesExceptions.h  FilesMonitor.h
structures/: Errors.h  FileStat.h  Protocol.h  Requests.h  structures.h
test/: CommandLineParser.cpp  CommandLineParser.h  Session.cpp  Session.h  clientMain.cpp  clientMainTest.cpp  serverMainTest.cpp  test.cpp
testDisk/: clientTests.cpp  clientTests.h  tests.cpp  tests.h  testsMain.cpp
utilities/: Errors.h  FileStat.h  Protocol.h  Requests.h
